# IniParser

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  main.cpp  test.ini  todo.txt
doc/: 2016-10-12-Note-17-41.xoj  README.md  c_api.md  features.md  format.md  usage.md
doc/uml/: class_diagram.xmi  ste_diagram.xmi
examples/: README.md
examples/load_c/: Makefile  README.md  load_example.ini  main.c
examples/load_c++/: Makefile  README.md  load_example.ini  main.cpp
examples/store_c/: Makefile  README.md  main.c
examples/store_c++/: Makefile  README.md  main.cpp
include/: IniEntry.h  IniEntry.hpp  IniFile.hpp  IniParser.h  IniParser.hpp  IniSection.h  IniSection.hpp  ini_config.h  ini_helper.h  ini_parser.h
src/: IniEntry.cpp  IniParser.cpp  IniSection.cpp  ini_helper.c  ini_parser.c  ini_parser.cpp  ini_reader.c  ini_writer.c
test/: IniFiletest.cpp  IniParsertest.cpp  IniSectiontest.cpp  Makefile  README.md  assert.c  assert.h  ini_helper_test.c  ini_helper_test.cpp  ini_parser_test.c  ini_read_test.c  ini_read_test.cpp  ini_write_test.c  ini_write_test.cpp  main.c  main.cpp  test.h  test.hpp
test/IniParser_load_test/: input1.ini  input2.ini
test/IniParser_store_test/: expected1.ini
test/ini_read_file_test/: expected4.txt  input3.ini  input6.ini
test/ini_read_test/: expected13.txt  expected2.txt  expected3.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
(+9 files in other folders)
